--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ base_name: tokyodebian-groonga-201412
 tags: []
 presentation_date: 
 version: 1.0.0
-licenses: []
+licenses: [CC BY SA 4.0]
 slideshare_id: 
 speaker_deck_id: 
 ustream_id: 
