--- a/config.yaml
+++ b/config.yaml
@@ -4,8 +4,9 @@ base_name: tokyodebian-groonga-201412
 tags: []
 presentation_date: 
 version: 2014.12.20.1
-licenses: [CC BY SA 4.0]
-slideshare_id: 
+licenses:
+- CC BY SA 4.0
+slideshare_id: tokyodebian-groonga-201412
 speaker_deck_id: 
 ustream_id: 
 vimeo_id: 
